--- a/Desktop/Registration.xaml
+++ b/Desktop/Registration.xaml
@@ -116,14 +116,17 @@
                         BorderBrush="#FFF96060" 
                         VerticalAlignment="Center" 
                         Margin="8 0 10 0" 
-                        FontFamily="Actor"/>
+                        FontFamily="Actor"
+                        Click="Button_Click"
+                    />
             </Border>
             <Border  
                      Margin="5 0 5 10"
                      CornerRadius="2 2 12 12"
                      BorderThickness="2" Background="#F96060">
                 <Button 
-                        x:Name="BackButton" Content="Назад"
+                        x:Name="Back" 
+                        Content="Назад"
                         Background="#F96060"
                         Padding="0 10 0 10"
                         Foreground="White"
@@ -131,7 +134,9 @@
                         BorderBrush="#FFF96060"
                         VerticalAlignment="Center"
                         Margin="8 0 10 0"
-                        FontFamily="Actor" />
+                        FontFamily="Actor" 
+                        Click="Back_Click"
+                    />
             </Border>
         </WrapPanel>
     </Grid>
